--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Amit personal website</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
+
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="Images/amit.png" height="130" width="130" alt="Profile pic"></td>
-                <td><h1>Amit Prakash.</h1>
+                <td><img src="Images/jaadu.png" height="130" width="130" alt="Profile pic"></td>
+                <td><h2>Amit Prakash</h2>
                     <p><i>Hi! I am a 3rd year student.</i> <em>I am learning Web Devlopment.</em></p>
                     <p><b>I ❤ coffee.</b></p></td>
             </tr>
@@ -18,6 +20,7 @@
         <ul>
             <li><a href="https://www.linkedin.com/in/amit-prakash-98708b1b5/">Linkedin Profile</a></li>
             <li><a href="contact.html">Contact Details</a></li>
+            <li><a href="favfood.html">Favourite Food</a></li>
         </ul>
         <h3>My interests</h3>
         <ul>
